package latihan_pbo.latihan3;

public class BangunDatar {

    private double panjang;
    private double lebar;
    private double alas;
    private double tinggi;
    private double sisi;
    private double jari;

    public double getPanjang() {
        return panjang;
    }
    public void setPanjang(double panjang) {
        this.panjang = panjang;
    }
    public double getLebar() {
        return lebar;
    }
    public void setLebar(double lebar) {
        this.lebar = lebar;
    }
    public double getAlas() {
        return alas;
    }
    public void setAlas(double alas) {
        this.alas = alas;
    }
    public double getTinggi() {
        return tinggi;
    }
    public void setTinggi(double tinggi) {
        this.tinggi = tinggi;
    }
    public double getSisi() {
        return sisi;
    }
    public void setSisi(double sisi) {
        this.sisi = sisi;
    }
    public double getJari() {
        return jari;
    }
    public void setJari(double jari) {
        this.jari = jari;
    }
    
}